fixed footer spacing and responsiveness

--- a/style.css
+++ b/style.css
@@ -27,15 +27,8 @@ body {
     width: auto;
 }
 
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 30px;
-}
-
 .fix {
-    margin-top: 60px;
+    margin-top: 133px;
     bottom: 0;
 }
 
